--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.github.robertsimoes:Shareable:0.1.0'
+    implementation 'org.jsoup:jsoup:1.11.2'
 }
